[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Gui/NewUserGui.gd" type="Script" id=1]
[ext_resource path="res://src/Gui/Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/gui/newplayer.png" type="Texture" id=3]

[node name="NewUserGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 320.0
margin_top = 184.0
margin_right = 640.0
margin_bottom = 208.0

[node name="BtnAccept" type="Button" parent="."]
margin_left = 512.0
margin_top = 408.0
margin_right = 672.0
margin_bottom = 440.0
text = "Start Playing"

[node name="BtnRandomize" type="Button" parent="."]
margin_left = 328.0
margin_top = 408.0
margin_right = 488.0
margin_bottom = 440.0
text = "Randomize Again (-$500)"

[node name="BarKeyboard" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 232.0
margin_right = 432.0
margin_bottom = 256.0

[node name="BarGuitar" parent="." instance=ExtResource( 2 )]
margin_left = 528.0
margin_top = 232.0
margin_right = 768.0
margin_bottom = 256.0

[node name="BarBass" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 272.0
margin_right = 432.0
margin_bottom = 296.0

[node name="BarDrummer" parent="." instance=ExtResource( 2 )]
margin_left = 528.0
margin_top = 272.0
margin_right = 768.0
margin_bottom = 296.0

[node name="BarTexter" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 312.0
margin_right = 432.0
margin_bottom = 336.0

[node name="BarMixer" parent="." instance=ExtResource( 2 )]
margin_left = 528.0
margin_top = 312.0
margin_right = 768.0
margin_bottom = 336.0

[node name="BarMotivation" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 352.0
margin_right = 432.0
margin_bottom = 376.0

[node name="BarTalent" parent="." instance=ExtResource( 2 )]
margin_left = 528.0
margin_top = 352.0
margin_right = 768.0
margin_bottom = 376.0

[node name="Label" type="Label" parent="."]
margin_left = 320.0
margin_top = 168.0
margin_right = 632.0
margin_bottom = 184.0
text = "Name:"
[connection signal="button_up" from="BtnAccept" to="." method="_on_BtnAccept_button_up"]
[connection signal="button_up" from="BtnRandomize" to="." method="_on_BtnRandomize_button_up"]
